--- a/Black and White/FlipsideView.xib
+++ b/Black and White/FlipsideView.xib
@@ -90,7 +90,7 @@
 						<reference key="NSSuperview" ref="249263867"/>
 						<reference key="NSWindow"/>
 						<int key="IBUIContentMode">4</int>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</object>
